<resources>
    <string name="app_name">دکتر مجوز</string>
    <string name="app_details_text">جزئیات برنامه</string>
    <string name="category_details_text">جزئیات دسته</string>
    <string name="permission_details_text">جزئیات مجوز</string>
    <string name="alert_database_nottodate_text">اطلاعات برنامه به روز نیست. بروزرسانی انجام شود؟</string>
    <string name="alert_database_nottodate_yes">بله</string>
    <string name="alert_database_nottodate_no">نه</string>
    <string name="category_tab_name">دسته بندی ها</string>
    <string name="application_tab_name">برنامه ها</string>
    <string name="permission_tab_name">مجوزها</string>
    <string name="dialog_update_text">در حال بررسی برنامه ها. شکیبا باشید.</string>
    <string name="dialog_uptodate_text">در حال بررسی تغییرات. شکیبا باشید.</string>
    <string name="application_detail_nodata">اطلاعاتی دریافت نشد</string>
    <string name="application_detail_package">نام بسته</string>
    <string name="application_detail_version">شماره نسخه (کد / نام)</string>
    <string name="application_detail_permission_count">تعداد مجوزها</string>
    <string name="application_detail_permission_used">مجوزهای در حال استفاده</string>
    <string name="application_detail_manager_unavailable">Function available only for Android >= 2.3</string>
    <string name="application_detail_system">سیستمی</string>
    <string name="permission_detail_nodata">اطلاعاتی دریافت نشد</string>
    <string name="permission_detail_description">توضیحات</string>
    <string name="permission_detail_application_count">تعداد برنامه ها</string>
    <string name="permission_detail_application_using">برنامه هایی که از این مجوز استفاده می کنند:</string>
    <string name="category_detail_nodata">اطلاعاتی دریافت نشد</string>
    <string name="category_detail_description">توضیحات</string>
    <string name="category_detail_application_count">تعداد برنامه ها</string>
    <string name="category_detail_application_using">برنامه های این دسته:</string>
    <string name="preference_application_name_title">نمایش نام برنامه</string>
    <string name="preference_application_name_true">نام برنامه نمایش داده می شود</string>
    <string name="preference_application_name_false">نام بسته برنامه نمایش داده می شود.</string>
    <string name="preference_application_order_title">مرتب سازی برنامه ها</string>
    <string name="preference_application_order_true">برنامه ها بر حسب نام مرتب می شوند</string>
    <string name="preference_application_order_false">برنامه ها بر حسب تعداد مجوزها مرتب می شوند</string>
    <string name="preference_application_hide_system_app_title">نمایش برنامه های سیستمی</string>
    <string name="preference_application_hide_system_app_true">برنامه های سیستمی نمایش داده نمی شوند.</string>
    <string name="preference_application_hide_system_app_false">برنامه های سیستمی نمایش داده می شوند.</string>
    <string name="preference_permission_order_title">مرتب سازی مجوزها</string>
    <string name="preference_permission_order_true">مجوزها بر حسب نام مرتب می شوند</string>
    <string name="preference_permission_order_false">مجوزها بر حسب تعداد برنامه های مرتب می شوند</string>
    <string name="preference_category_order_title">مرتب سازی دسته ها</string>
    <string name="preference_category_order_true">دسته ها بر حسب نام مرتب می شوند</string>
    <string name="preference_category_order_false">دسته ها بر حسب تعداد برنامه ها مرتب می شوند</string>
    <string name="menu_update">بروز رسانی داده ها</string>
    <string name="menu_preferences">تنظیمات</string>
    <string name="category_LOCATION">دسترسی به اطلاعات موقعیت مکانی</string>
    <string name="category_PHONE_IDENTITY">دسترسی به هویت دستگاه یا کاربر</string>
    <string name="category_MESSAGES">دسترسی به ایمیل، SMS و MMS</string>
    <string name="category_CONTACTS">دسترسی به دفتر تلفن</string>
    <string name="category_CALENDAR">دسترسی به تقویم</string>
    <string name="category_PAYING">دسترسی به خدمات پرداخت</string>
    <string name="category_SYSTEM">دسترسی به تنظیمات سیستمی</string>
    <string name="permission_ACCESS_COARSE_LOCATION">به برنامه اجازه می دهد اطلاعات مکانی غیر دقیق مانند موقعیت شبکه مخابراتی و شبکه Wifi را استفاده کند.\nAllows an application to access coarse (e.g., Cell-ID, WiFi) location</string>
    <string name="permission_ACCESS_FINE_LOCATION">به برنامه اجازه می دهد از اطلاعات موقعیت مکانی دقیق که از GPS به دست می آید استفاده کند.\nAllows an application to access fine (e.g., GPS) location</string>
    <string name="permission_ACCESS_LOCATION_EXTRA_COMMANDS">به برنامه اجازه دسترسی به دستورات مختص فراهم کننده اطلاعات جغرافیایی را می دهد.\nAllows an application to access extra location provider commands</string>
    <string name="permission_ACCESS_MOCK_LOCATION">به برنامه اجازه می دهد که یک فراهم کننده اطلاعات مکانی غیر واقعی برای تست برنامه ایجاد کند.\nAllows an application to create mock location providers for testing</string>
    <string name="permission_ACCESS_NETWORK_STATE">به برنامه اجازه می دهد اطلاعاتی درباره شبکه ها کسب کند.\nAllows applications to access information about networks</string>
    <string name="permission_com.farsitel.bazaar.permission.PAY_THROUGH_BAZAAR">پرداخت از طریق کافه بازار</string>
    <string name="permission_BLUETOOTH">به برنامه اجازه می دهد به دستگاه های بلوتوث جفت شده متصل شود.\nAllows applications to connect to paired bluetooth devices</string>
    <string name="permission_BLUETOOTH_ADMIN">به برنامه اجازه می دهد به دنبال دستگاه های بلوتوث بگردد و با آنها جفت شود.\nAllows applications to discover and pair bluetooth devices</string>
    <string name="permission_CAMERA">برای دسترسی به دوربین دستگاه ضروری است.\nRequired to be able to access the camera device.</string>
    <string name="permission_BATTERY_STATS">به برنامه اجازه می دهد اطلاعات آماری مربوط به باتری را جمع آوری کند.\nAllows an application to collect battery statistics</string>
    <string name="permission_ACCESS_WIFI_STATE">به برنامه اجازه می دهد اطلاعاتی درباره شبکه های Wi-Fi کسب کند.\nAllows applications to access information about Wi-Fi networks</string>
    <string name="permission_CALL_PHONE">به برنامه اجازه می دهد که یک تماس تلفنی را بدون رفتن به برنامه تماس برای گرفتن تأیید کاربر آغاز کند.\n.Allows an application to initiate a phone call without going through the Dialer user interface for the user to confirm the call being placed.</string>
    <string name="permission_CALL_PRIVILEGED">به برنامه اجازه می دهد تا هر شماره ای، حتا شماره های اضطراری را بدون رفتن به برنامه تماس ها برای گرفتن تأیید کاربر آغاز کند.\nAllows an application to call any phone number, including emergency numbers, without going through the Dialer user interface for the user to confirm the call being placed.</string>
    <string name="permission_CHANGE_CONFIGURATION">به برنامه اجازه می دهد تا تنظیمات فعلی مثل تنظیمات کشوری را تغییر دهد.\nAllows an application to modify the current configuration, such as locale.</string>
    <string name="permission_CHANGE_NETWORK_STATE">به برنامه اجازه می دهد وضعیت اتصال شبکه را تغییر دهد.\nAllows applications to change network connectivity state</string>
    <string name="permission_CHANGE_WIFI_STATE">به برنامه اجازه می دهد وضعیت اتصال وای فای را تغییر دهد.\nAllows applications to change Wi-Fi connectivity state</string>
    <string name="permission_CLEAR_APP_CACHE">به برنامه اجازه می دهد فایل های کش همه برنامه های نصب شده را پاک کند.\nAllows an application to clear the caches of all installed applications on the device.</string>
    <string name="permission_CLEAR_APP_USER_DATA">به برنامه اجازه می دهد اطلاعات کاربر را پاک کند.\nAllows an application to clear user data</string>
    <string name="permission_DELETE_CACHE_FILES">به برنامه اجازه می دهد فایل های کش را پاک کند.\nAllows an application to delete cache files.</string>
    <string name="permission_DELETE_PACKAGES">به برنامه اجازه می دهد تا برنامه های نصب شده را حذف کند.\nAllows an application to delete packages.</string>
    <string name="permission_DEVICE_POWER">مجوز دسترسی سطح پایین به مدیریت قدرت.\nAllows low-level access to power management</string>
    <string name="permission_DISABLE_KEYGUARD">به برنامه اجازه می دهد صفحه قفل را غیرفعال کند.\nAllows applications to disable the keyguard</string>
    <string name="permission_FLASHLIGHT">مجوز دسترسی به فلاش.\nAllows access to the flashlight</string>
    <string name="permission_GET_ACCOUNTS">مجوز دسترسی به فهرست حساب های کاربری در سرویس مدیریت حساب های کاربری.\nAllows access to the list of accounts in the Accounts Service</string>
    <string name="permission_GET_PACKAGE_SIZE">به برنامه اجازه می دهد تا اندازه فضای ذخیره سازی هر برنامه ای را بداند.\nAllows an application to find out the space used by any package.</string>
    <string name="permission_GET_TASKS">به برنامه اجازه می دهد تا اطلاعاتی درباره وظایف در حال اجرا یا اخیراً اجرا شده از قبیل یک عکس بند انگشتی و اکتیویتی های آن ها به دست آورد.\nAllows an application to get information about the currently or recently running tasks: a thumbnail representation of the tasks, what activities are running in it, etc.</string>
    <string name="permission_GLOBAL_SEARCH">این مجوز برای عرضه کنندگان محتوا است و به برنامه جستجو اجازه می دهد تا به اطلاعات آنها دسترسی داشته باشند.\nThis permission can be used on content providers to allow the global search system to access their data.</string>
    <string name="permission_HARDWARE_TEST">مجوز دسترسی به سخت افزارهای جانبی.\nAllows access to hardware peripherals.</string>
    <string name="permission_INJECT_EVENTS">به برنامه اجازه می دهد تا وقایع کاربر مثل فشردن کلیدها، لمس صفحه و ... را به جریان اصلی وقایع تزریق کند و آنها را به پنجره های مختلف بفرستد.\n، Allows an application to inject user events (keys, touch, trackball) into the event stream and deliver them to ANY window.</string>
    <string name="permission_INSTALL_LOCATION_PROVIDER">به برنامه اجازه می دهد تا یک عرضه کننده مکان به مدیر مکان اضافه کند.\nAllows an application to install a location provider into the Location Manager</string>
    <string name="permission_INSTALL_PACKAGES">به برنامه اجازه می دهد تا برنامه های دیگری را نصب کند.\nAllows an application to install packages.</string>
    <string name="permission_INTERNET">به برنامه ها اجازه می دهد تا اتصال اینترنتی برقرار کنند.\nAllows applications to open network sockets.</string>
    <string name="permission_KILL_BACKGROUND_PROCESSES">به برنامه اجازه می دهد تا فرایندهای در حال اجرا در پس زمینه را بکشند.\nAllows an application to call killBackgroundProcesses(String).</string>
    <string name="permission_MANAGE_ACCOUNTS">به برنامه اجازه می دهد تا فهرست حسابها در مدیریت حسابهای کاربری را مدیریت کنند.\nAllows an application to manage the list of accounts in the AccountManager</string>
    <string name="permission_MODIFY_AUDIO_SETTINGS">به برنامه اجازه می دهد تا تنظیمات سراسری صدا را تغییر دهد.\nAllows an application to modify global audio settings</string>
    <string name="permission_MOUNT_FORMAT_FILESYSTEMS">مجوز فرمت کردن حافظه های خارجی.\nAllows formatting file systems for removable storage.</string>
    <string name="permission_MOUNT_UNMOUNT_FILESYSTEMS">مجوز نصب یا حذف حافظه های خارجی\nAllows mounting and unmounting file systems for removable storage.</string>
    <string name="permission_NFC">به برنامه اجازه می دهد تا عملیات ورودی و خروجی روی NFC اجرا کند.\nAllows applications to perform I/O operations over NFC</string>
    <string name="permission_PERSISTENT_ACTIVITY">به برنامه اجازه می دهد تا اکتیویتی هایش را پایدار کند.\nAllow an application to make its activities persistent.</string>
    <string name="permission_PROCESS_OUTGOING_CALLS">به برنامه اجازه می دهد تا تماس های خروجی را مونیتور کند و آنها را تغییر دهد یا آنها را متوقف کند.\nAllows an application to monitor, modify, or abort outgoing calls.</string>
    <string name="permission_READ_CALENDAR">به برنامه اجازه می دهد تا اطلاعات تقویم کاربر را بخواند.\nAllows an application to read the user\'s calendar data.</string>
</resources>