<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:orientation="vertical" >

    <RelativeLayout style="@style/HeaderBox" >

        <TextView
            style="@style/Text.Header"
            android:text="@string/app_details_text" />
    </RelativeLayout>

    <LinearLayout
        style="@style/Box"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/application_detail_manage_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null" />

        <TextView
            android:id="@+id/application_detail_label"
            style="@style/sub_title"
            android:layout_width="0dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        style="@style/Box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/package_name_text_view"
                style="@style/param_title"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/application_detail_package" />

            <TextView
                android:id="@+id/application_detail_system"
                style="@style/param_title"
                android:layout_width="wrap_content"
                android:layout_toLeftOf="@id/package_name_text_view"
                android:text="@string/application_detail_system"
                android:textColor="#FF0000" />
        </RelativeLayout>

        <TextView
            android:id="@+id/application_detail_name"
            style="@style/normal_text" />

        <View style="@style/Separator" />

        <TextView
            style="@style/param_title"
            android:text="@string/application_detail_version" />

        <TextView
            android:id="@+id/application_detail_version"
            style="@style/normal_text" />

        <View style="@style/Separator" />

        <TextView
            style="@style/param_title"
            android:text="@string/application_detail_permission_count" />

        <TextView
            android:id="@+id/application_detail_permission_count"
            style="@style/normal_text" />
    </LinearLayout>

    <LinearLayout
        style="@style/Box"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            style="@style/param_title"
            android:text="@string/application_detail_permission_used" />

        <View style="@style/Separator" />

        <ListView
            android:id="@+id/application_detail_permission_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:cacheColorHint="@android:color/transparent" />
    </LinearLayout>

    <!-- Adad -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ir.adad.AdView
            android:id="@+id/ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            token="ADAD_TOKEN" />
    </LinearLayout>

</LinearLayout>
