<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout style="@style/HeaderBox" >

        <TextView
            style="@style/Text.Header"
            android:text="@string/category_details_text" />
    </RelativeLayout>

    <LinearLayout
        style="@style/Box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/category_detail_name"
            style="@style/sub_title"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal" />

        <View style="@style/Separator" />

        <TextView
            style="@style/param_title"
            android:text="@string/category_detail_description" />

        <TextView
            android:id="@+id/category_detail_description"
            style="@style/normal_text" />

        <View style="@style/Separator" />

        <TextView
            style="@style/param_title"
            android:text="@string/category_detail_application_count" />

        <TextView
            android:id="@+id/category_detail_application_count"
            style="@style/normal_text" />
    </LinearLayout>

    <LinearLayout
        style="@style/Box"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            style="@style/param_title"
            android:text="@string/category_detail_application_using" />

        <View style="@style/Separator" />

        <ListView
            android:id="@+id/category_detail_application_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:cacheColorHint="@android:color/transparent" />
    </LinearLayout>

     <!-- Adad -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ir.adad.AdView
            android:id="@+id/ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            token="ADAD_TOKEN" />
    </LinearLayout>

</LinearLayout>